Development history / change log, please read from bottom up

Version 3.3.4 - xx yyy 2018
Generic changes/fixes
	* fix ratio calculation triggered used capacity to reached motor altitude
	
Device specific changes/fixes
	* HottAdapter* -  fix error message GDE_MSGW2404 appearing only at the first import, Fix missing tab activation after import
	* HottAdapter - fix wrong sensor sequence reference while import *.bin with single ESC sensor module connected.
	* Hitec DRX1 - add support (identical Hitex RDX1 Pro is the 100W version)
	* Hitec X1 Red
	
History analysis
	* fix none translated name display while measuring trail measurements
	* fix missing tab activation after import

Version 3.3.3 - 10 Aug 2018
Generic changes/fixes
	* fix recursion synchronizing compare set while adding curve to compare set
	* handle device base directory by interface method to enable device specific directories
	* enhance calculation of synched scale label 
	* Reduce DataExplorer startup duration
	* Ask user for confirmation prior to purging an object key
	* fix channel object key handling, channels of type outlet (chargers) might have different object key, update object selector accordingly
	* fix unsaved reason entry for changed comment
	* fix regression renaming object key scenario
Device specific changes/fixes
	* HoTTAdapter* - fix 19200 Baud protocol live data, skip Rx query while other sensors detected, Rx data in sensor data contained
	* HoTTAdapter* - add file selection hint for *.bin;*.log 
	* HoTTAdapter2 - fix statistics calculation while capacity doesn't start at zero 
	* S32 - fix factor to correct external temperatures
	* S32_2 - initial release for S32 as version 2 displaying all measurement values on a single time line
	* S32 - fix measurement synchronization references (need device XML replacement)
	* S32 - fix external temperature factor according customer feedback
	* Ultramat* single channel charger - fix possible NullPointerException