@@ -388,8 +388,9 @@ public class HoTTbinReader {
 		HoTTbinReader.isTextModusSignaled = false;
 		boolean isWrongDataBlockNummerSignaled = false;
 		int countPackageLoss = 0;
-		long numberDatablocks = fileSize / HoTTbinReader.dataBlockSize / (HoTTbinReader.isReceiverOnly && !HoTTAdapter.isChannelsChannelEnabled ? 10 : 1);
+		long numberDatablocks = fileSize / HoTTbinReader.dataBlockSize;
 		long startTimeStamp_ms = HoTTbinReader.getStartTimeStamp(file, numberDatablocks);
+		numberDatablocks = HoTTbinReader.isReceiverOnly && !HoTTAdapter.isChannelsChannelEnabled ? numberDatablocks/10 : numberDatablocks;
 		String date = StringHelper.getDate();
 		String dateTime = new SimpleDateFormat("yyyy-MM-dd, HH:mm:ss").format(startTimeStamp_ms); //$NON-NLS-1$
 		RecordSet tmpRecordSet;
